--- a/interior-design/components/styles/contacts.module.scss
+++ b/interior-design/components/styles/contacts.module.scss
@@ -78,7 +78,7 @@
 @media (max-width: 820px) {
   .twoContainerWhy {
     flex-direction: column;
-    padding: 0;
+    padding: 50px 0 0;
     max-height: 100%;
   }
 
