--- a/interior-design/components/styles/projects.module.scss
+++ b/interior-design/components/styles/projects.module.scss
@@ -237,8 +237,8 @@
     .projectContainer {
         overflow-x: hidden;
         padding: 0;
-        padding-top: 1rem;
-        margin-bottom: 1rem;
+        padding-top: 50px;
+        margin-bottom: 0.5rem;
         text-align: left;
     }
 
@@ -252,7 +252,7 @@
     .headingTwo {
         margin-bottom: 0.5rem;
         padding-bottom: 0.5rem;
-        margin-top: 3rem;
+        margin-top: 1rem;
         margin-left: 2rem;
     }
 
